refactor: in every execute test, replaced Arrays.asList with List.of